--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".BillCalculator"
+            android:exported="true" />
+        <activity
+            android:name=".ColorChanger"
+            android:exported="true" />
+        <activity
+            android:name=".BMICalculatorApp"
+            android:exported="true" />
+        <activity
             android:name=".CheckBoxRadioButton"
             android:exported="true" />
         <activity
