Added spinner codes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".spinners"
+            android:exported="true" />
+        <activity
             android:name=".MessFoodOrdering"
             android:exported="true" />
         <activity
