--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".FlipkartProperWelcome"
+            android:exported="true" />
+        <activity
+            android:name=".FlipkartWelcome"
+            android:exported="true" />
+        <activity
+            android:name=".IntentProgram"
+            android:exported="true" />
+        <activity
             android:name=".CA1"
             android:exported="true" />
         <activity
