--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".FeedbackPortfolio"
+            android:exported="false" />
+        <activity
+            android:name=".Portfolio"
+            android:exported="false" />
+        <activity
             android:name=".MenuBarIntro"
             android:exported="true" />
         <activity
