--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +18,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
+        <activity
+            android:name=".DialogueBoxIntro"
+            android:exported="true" />
+        <activity
+            android:name=".Permissions"
+            android:exported="true" />
+        <activity
+            android:name=".QuoteChooser"
+            android:exported="true" />
+        <activity
+            android:name=".AppChooser"
+            android:exported="true" />
+        <activity
+            android:name=".CA2"
+            android:exported="false" />
         <activity
             android:name=".FeedbackPortfolio"
             android:exported="false" />
