Updated dialog box stuff and portfolio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".MainCustomDialogBox"
+            android:exported="false" />
+        <activity
+            android:name=".CustomDialogBoxIntro"
+            android:exported="true" />
+        <activity
+            android:name=".RatingPage"
+            android:exported="true" />
+        <activity
             android:name=".DialogueBoxIntro"
             android:exported="true" />
         <activity
@@ -38,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".Portfolio"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MenuBarIntro"
             android:exported="true" />
