--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".LanguageDialog"
+            android:exported="true" />
+        <activity
             android:name=".MainCustomDialogBox"
             android:exported="false" />
         <activity
