--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
+        <activity
+            android:name=".CA3"
+            android:exported="true" />
+        <activity
+            android:name=".ElearningSignIn"
+            android:exported="false" />
+        <activity
+            android:name=".ELearningApp"
+            android:exported="false" />
+        <activity
+            android:name=".RecipeApp"
+            android:exported="false" />
         <activity
             android:name=".ContextMenuIntro"
             android:exported="true" />
