--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".CA2"
+            android:exported="true" />
+        <activity
             android:name=".LocalizationExample2"
             android:exported="true" />
         <activity
@@ -68,9 +71,6 @@
         <activity
             android:name=".AppChooser"
             android:exported="true" />
-        <activity
-            android:name=".CA2"
-            android:exported="false" />
         <activity
             android:name=".FeedbackPortfolio"
             android:exported="false" />
