--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.AndroidDevelopmentPrograms"
         tools:targetApi="31">
         <activity
+            android:name=".RelativeLayout"
+            android:exported="false" />
+        <activity
             android:name=".CA2"
             android:exported="true" />
         <activity
